--- a/archives/toutiao-search/2024-02-19.md
+++ b/archives/toutiao-search/2024-02-19.md
@@ -1,56 +1,73 @@
 # 2024-02-19
 
-共 135 条
+共 149 条
 
 <!-- BEGIN TOUTIAO -->
-<!-- 最后更新时间 Mon Feb 19 2024 11:00:34 GMT+0800 (China Standard Time) -->
-1. [司机卡点最后一分钟免费下高速](https://so.toutiao.com/search?keyword=司机卡点最后一分钟免费下高速)
-1. [中国海警在厦金海域开展执法行动](https://so.toutiao.com/search?keyword=中国海警在厦金海域开展执法行动)
-1. [7大关键词盘点龙年春节长假](https://so.toutiao.com/search?keyword=7大关键词盘点龙年春节长假)
+<!-- 最后更新时间 Mon Feb 19 2024 12:01:39 GMT+0800 (China Standard Time) -->
 1. [格力集团迎来“新掌门”](https://so.toutiao.com/search?keyword=格力集团迎来“新掌门”)
+1. [司机卡点最后一分钟免费下高速](https://so.toutiao.com/search?keyword=司机卡点最后一分钟免费下高速)
+1. [7大关键词盘点龙年春节长假](https://so.toutiao.com/search?keyword=7大关键词盘点龙年春节长假)
+1. [格力电器仍由董明珠掌舵](https://so.toutiao.com/search?keyword=格力电器仍由董明珠掌舵)
+1. [男子连续11天刮刮乐兑奖 老板娘报警](https://so.toutiao.com/search?keyword=男子连续11天刮刮乐兑奖+老板娘报警)
 1. [比亚迪秦PLUS荣耀版上市](https://so.toutiao.com/search?keyword=比亚迪秦PLUS荣耀版上市)
+1. [胖东来试吃员工经民主投票可转岗](https://so.toutiao.com/search?keyword=胖东来试吃员工经民主投票可转岗)
+1. [王小洪同美国土安全部长举行会晤](https://so.toutiao.com/search?keyword=王小洪同美国土安全部长举行会晤)
+1. [小孩从石狮嘴里拿出圆球放不回去](https://so.toutiao.com/search?keyword=小孩从石狮嘴里拿出圆球放不回去)
+1. [无锡发生多人命案？警方辟谣](https://so.toutiao.com/search?keyword=无锡发生多人命案？警方辟谣)
+1. [因堵车延迟下高速应付全程高速费吗](https://so.toutiao.com/search?keyword=因堵车延迟下高速应付全程高速费吗)
 1. [男子走应急车道鸣笛惹众怒被包围](https://so.toutiao.com/search?keyword=男子走应急车道鸣笛惹众怒被包围)
+1. [今日雨水](https://so.toutiao.com/search?keyword=今日雨水)
+1. [正式确诊为魏晨](https://so.toutiao.com/search?keyword=正式确诊为魏晨)
+1. [湖南高速：来不及可先下一次高速](https://so.toutiao.com/search?keyword=湖南高速：来不及可先下一次高速)
+1. [俄攻陷乌军事堡垒震动美欧](https://so.toutiao.com/search?keyword=俄攻陷乌军事堡垒震动美欧)
+1. [上交压岁钱时三个孩子一脸不情愿](https://so.toutiao.com/search?keyword=上交压岁钱时三个孩子一脸不情愿)
+1. [中国缘何连续两个月增持美国国债](https://so.toutiao.com/search?keyword=中国缘何连续两个月增持美国国债)
+1. [建行回应女子因急办业务下跪](https://so.toutiao.com/search?keyword=建行回应女子因急办业务下跪)
+1. [高速太堵跟领导请假被拒了](https://so.toutiao.com/search?keyword=高速太堵跟领导请假被拒了)
+1. [高合汽车宣布停工停产6个月](https://so.toutiao.com/search?keyword=高合汽车宣布停工停产6个月)
+1. [卫健委干部盗卖1.5万套防护服获刑](https://so.toutiao.com/search?keyword=卫健委干部盗卖1.5万套防护服获刑)
+1. [俄军拿下阿夫杰耶夫卡意味着什么](https://so.toutiao.com/search?keyword=俄军拿下阿夫杰耶夫卡意味着什么)
+1. [湖南“解放思想大讨论”是变革前奏吗](https://so.toutiao.com/search?keyword=湖南“解放思想大讨论”是变革前奏吗)
+1. [大V谈2024年老百姓十大愿望](https://so.toutiao.com/search?keyword=大V谈2024年老百姓十大愿望)
+1. [马来西亚歌手父亲吸入鞭炮硝烟去世](https://so.toutiao.com/search?keyword=马来西亚歌手父亲吸入鞭炮硝烟去世)
+1. [江苏一工厂爆炸致3死2失联](https://so.toutiao.com/search?keyword=江苏一工厂爆炸致3死2失联)
+1. [吴尊感谢昆凌送他霉霉演唱会门票](https://so.toutiao.com/search?keyword=吴尊感谢昆凌送他霉霉演唱会门票)
+1. [高三班主任强吻女学生被停职](https://so.toutiao.com/search?keyword=高三班主任强吻女学生被停职)
+1. [演员李勤勤收养周海媚爱犬](https://so.toutiao.com/search?keyword=演员李勤勤收养周海媚爱犬)
+1. [网友用无人机拍到狼群雪中前行画面](https://so.toutiao.com/search?keyword=网友用无人机拍到狼群雪中前行画面)
+1. [武汉多所学校延迟返校](https://so.toutiao.com/search?keyword=武汉多所学校延迟返校)
+1. [春节上门喂宠物8天挣上万](https://so.toutiao.com/search?keyword=春节上门喂宠物8天挣上万)
+1. [普京：俄乌战事关乎俄罗斯“存亡”](https://so.toutiao.com/search?keyword=普京：俄乌战事关乎俄罗斯“存亡”)
+1. [马丽测评了14条光腿神器](https://so.toutiao.com/search?keyword=马丽测评了14条光腿神器)
+1. [男子吃席发现村里开始上预制菜](https://so.toutiao.com/search?keyword=男子吃席发现村里开始上预制菜)
+1. [高速堵车第一辆车在干啥](https://so.toutiao.com/search?keyword=高速堵车第一辆车在干啥)
+1. [起底胖东来热搜背后的AB面](https://so.toutiao.com/search?keyword=起底胖东来热搜背后的AB面)
+1. [飞海南机票价格断崖式暴跌](https://so.toutiao.com/search?keyword=飞海南机票价格断崖式暴跌)
+1. [张雪峰晒开工红包：200是最低的](https://so.toutiao.com/search?keyword=张雪峰晒开工红包：200是最低的)
+1. [战略要地易手 俄乌冲突往哪走](https://so.toutiao.com/search?keyword=战略要地易手+俄乌冲突往哪走)
+1. [男子观影打呼噜遭暴打](https://so.toutiao.com/search?keyword=男子观影打呼噜遭暴打)
+1. [颜宁谈贾玲新造型：陷入刻板审美](https://so.toutiao.com/search?keyword=颜宁谈贾玲新造型：陷入刻板审美)
+1. [2.62万元买下北京1.18㎡房子](https://so.toutiao.com/search?keyword=2.62万元买下北京1.18㎡房子)
+1. [名嘴预测下任台行政机构负责人人选](https://so.toutiao.com/search?keyword=名嘴预测下任台行政机构负责人人选)
+1. [詹姆斯：对成为湖人球员一直很开心](https://so.toutiao.com/search?keyword=詹姆斯：对成为湖人球员一直很开心)
+1. [腾讯小米为员工发开工红包](https://so.toutiao.com/search?keyword=腾讯小米为员工发开工红包)
+1. [春节涨价被停业面馆致歉](https://so.toutiao.com/search?keyword=春节涨价被停业面馆致歉)
+1. [Sora的真正价值在哪](https://so.toutiao.com/search?keyword=Sora的真正价值在哪)
+1. [普拉博沃与中国驻印尼大使互道发财](https://so.toutiao.com/search?keyword=普拉博沃与中国驻印尼大使互道发财)
+1. [中国海警在厦金海域开展执法行动](https://so.toutiao.com/search?keyword=中国海警在厦金海域开展执法行动)
 1. [徐冬冬尹子维订婚](https://so.toutiao.com/search?keyword=徐冬冬尹子维订婚)
 1. [比亚迪路天：要实现“电比油低”](https://so.toutiao.com/search?keyword=比亚迪路天：要实现“电比油低”)
 1. [收费站提前1小时停止免费？不实](https://so.toutiao.com/search?keyword=收费站提前1小时停止免费？不实)
 1. [谭德塞就暴发“X疾病”可能性警告](https://so.toutiao.com/search?keyword=谭德塞就暴发“X疾病”可能性警告)
-1. [因堵车延迟下高速应付全程高速费吗](https://so.toutiao.com/search?keyword=因堵车延迟下高速应付全程高速费吗)
-1. [正式确诊为魏晨](https://so.toutiao.com/search?keyword=正式确诊为魏晨)
-1. [今日雨水](https://so.toutiao.com/search?keyword=今日雨水)
-1. [小孩从石狮嘴里拿出圆球放不回去](https://so.toutiao.com/search?keyword=小孩从石狮嘴里拿出圆球放不回去)
 1. [国家安全部喊话美国中情局](https://so.toutiao.com/search?keyword=国家安全部喊话美国中情局)
-1. [湖南高速：来不及可先下一次高速](https://so.toutiao.com/search?keyword=湖南高速：来不及可先下一次高速)
 1. [格力电器：高额分红重视股东回报](https://so.toutiao.com/search?keyword=格力电器：高额分红重视股东回报)
-1. [马来西亚歌手父亲吸入鞭炮硝烟去世](https://so.toutiao.com/search?keyword=马来西亚歌手父亲吸入鞭炮硝烟去世)
-1. [格力电器仍由董明珠掌舵](https://so.toutiao.com/search?keyword=格力电器仍由董明珠掌舵)
-1. [飞海南机票价格断崖式暴跌](https://so.toutiao.com/search?keyword=飞海南机票价格断崖式暴跌)
-1. [高合汽车宣布停工停产6个月](https://so.toutiao.com/search?keyword=高合汽车宣布停工停产6个月)
-1. [演员李勤勤收养周海媚爱犬](https://so.toutiao.com/search?keyword=演员李勤勤收养周海媚爱犬)
-1. [建行回应女子因急办业务下跪](https://so.toutiao.com/search?keyword=建行回应女子因急办业务下跪)
-1. [高速太堵跟领导请假被拒了](https://so.toutiao.com/search?keyword=高速太堵跟领导请假被拒了)
-1. [卫健委干部盗卖1.5万套防护服获刑](https://so.toutiao.com/search?keyword=卫健委干部盗卖1.5万套防护服获刑)
-1. [中国缘何连续两个月增持美国国债](https://so.toutiao.com/search?keyword=中国缘何连续两个月增持美国国债)
-1. [俄军拿下阿夫杰耶夫卡意味着什么](https://so.toutiao.com/search?keyword=俄军拿下阿夫杰耶夫卡意味着什么)
-1. [普京：俄乌战事关乎俄罗斯“存亡”](https://so.toutiao.com/search?keyword=普京：俄乌战事关乎俄罗斯“存亡”)
-1. [高三班主任强吻女学生被停职](https://so.toutiao.com/search?keyword=高三班主任强吻女学生被停职)
-1. [高速堵车第一辆车在干啥](https://so.toutiao.com/search?keyword=高速堵车第一辆车在干啥)
-1. [江苏一工厂爆炸致3死2失联](https://so.toutiao.com/search?keyword=江苏一工厂爆炸致3死2失联)
-1. [网友用无人机拍到狼群雪中前行画面](https://so.toutiao.com/search?keyword=网友用无人机拍到狼群雪中前行画面)
 1. [流浪棋王邓有邦现状](https://so.toutiao.com/search?keyword=流浪棋王邓有邦现状)
-1. [男子吃席发现村里开始上预制菜](https://so.toutiao.com/search?keyword=男子吃席发现村里开始上预制菜)
-1. [马丽测评了14条光腿神器](https://so.toutiao.com/search?keyword=马丽测评了14条光腿神器)
 1. [极兔快递股价跳水](https://so.toutiao.com/search?keyword=极兔快递股价跳水)
 1. [釜山世乒赛团体赛国乒女团三连胜](https://so.toutiao.com/search?keyword=釜山世乒赛团体赛国乒女团三连胜)
-1. [春节上门喂宠物8天挣上万](https://so.toutiao.com/search?keyword=春节上门喂宠物8天挣上万)
-1. [男子观影打呼噜遭暴打](https://so.toutiao.com/search?keyword=男子观影打呼噜遭暴打)
 1. [南通龙椅厕所](https://so.toutiao.com/search?keyword=南通龙椅厕所)
-1. [颜宁谈贾玲新造型：陷入刻板审美](https://so.toutiao.com/search?keyword=颜宁谈贾玲新造型：陷入刻板审美)
-1. [2.62万元买下北京1.18㎡房子](https://so.toutiao.com/search?keyword=2.62万元买下北京1.18㎡房子)
 1. [俄称在多个方向击退乌军进攻](https://so.toutiao.com/search?keyword=俄称在多个方向击退乌军进攻)
 1. [特朗普推出运动鞋 售价399美元](https://so.toutiao.com/search?keyword=特朗普推出运动鞋+售价399美元)
-1. [Sora的真正价值在哪](https://so.toutiao.com/search?keyword=Sora的真正价值在哪)
 1. [詹姆斯称自己生涯余额已没那么多](https://so.toutiao.com/search?keyword=詹姆斯称自己生涯余额已没那么多)
-1. [腾讯小米为员工发开工红包](https://so.toutiao.com/search?keyword=腾讯小米为员工发开工红包)
 1. [美军称对也门胡塞武装实施5次打击](https://so.toutiao.com/search?keyword=美军称对也门胡塞武装实施5次打击)
 1. [纽约州长就“用词不当”公开道歉](https://so.toutiao.com/search?keyword=纽约州长就“用词不当”公开道歉)
 1. [OpenAI视频生成模型如何影响普通人](https://so.toutiao.com/search?keyword=OpenAI视频生成模型如何影响普通人)
@@ -94,9 +111,7 @@
 1. [老人旅游时睡梦中去世 家属起诉旅行社](https://so.toutiao.com/search?keyword=老人旅游时睡梦中去世+家属起诉旅行社)
 1. [三亚机票今年为何涨得那么猛](https://so.toutiao.com/search?keyword=三亚机票今年为何涨得那么猛)
 1. [王毅驳斥中国在南海咄咄逼人谬论](https://so.toutiao.com/search?keyword=王毅驳斥中国在南海咄咄逼人谬论)
-1. [武汉多所学校延迟返校](https://so.toutiao.com/search?keyword=武汉多所学校延迟返校)
 1. [拜登：美国会继续向乌克兰提供援助](https://so.toutiao.com/search?keyword=拜登：美国会继续向乌克兰提供援助)
-1. [起底胖东来热搜背后的AB面](https://so.toutiao.com/search?keyword=起底胖东来热搜背后的AB面)
 1. [拜年不带孩子：怕被以为是讨压岁钱](https://so.toutiao.com/search?keyword=拜年不带孩子：怕被以为是讨压岁钱)
 1. [乌克兰外长接受采访时抽起了雪茄](https://so.toutiao.com/search?keyword=乌克兰外长接受采访时抽起了雪茄)
 1. [台舆论关注大陆厦金海域巡查常态化](https://so.toutiao.com/search?keyword=台舆论关注大陆厦金海域巡查常态化)
@@ -135,7 +150,6 @@
 1. [女考古学家仍用着40年前的灯绳](https://so.toutiao.com/search?keyword=女考古学家仍用着40年前的灯绳)
 1. [曼联官方晒对阵卢顿海报](https://so.toutiao.com/search?keyword=曼联官方晒对阵卢顿海报)
 1. [周杰伦昆凌看霉霉演唱会](https://so.toutiao.com/search?keyword=周杰伦昆凌看霉霉演唱会)
-1. [张雪峰晒开工红包：200是最低的](https://so.toutiao.com/search?keyword=张雪峰晒开工红包：200是最低的)
 1. [胡锡进谈文生视频模型Sora](https://so.toutiao.com/search?keyword=胡锡进谈文生视频模型Sora)
 1. [过年对于留守老人就像一场热闹的梦](https://so.toutiao.com/search?keyword=过年对于留守老人就像一场热闹的梦)
 1. [胡兵伦敦街头走出T台步伐](https://so.toutiao.com/search?keyword=胡兵伦敦街头走出T台步伐)
