--- a/archives/toutiao-search/2024-02-19.md
+++ b/archives/toutiao-search/2024-02-19.md
@@ -1,55 +1,75 @@
 # 2024-02-19
 
-共 163 条
+共 182 条
 
 <!-- BEGIN TOUTIAO -->
-<!-- 最后更新时间 Mon Feb 19 2024 13:00:35 GMT+0800 (China Standard Time) -->
-1. [司机卡点最后一分钟免费下高速](https://so.toutiao.com/search?keyword=司机卡点最后一分钟免费下高速)
-1. [格力集团迎来“新掌门”](https://so.toutiao.com/search?keyword=格力集团迎来“新掌门”)
-1. [龙年春节的这些瞬间 看哭了](https://so.toutiao.com/search?keyword=龙年春节的这些瞬间+看哭了)
-1. [胖东来试吃员工经民主投票可转岗](https://so.toutiao.com/search?keyword=胖东来试吃员工经民主投票可转岗)
+<!-- 最后更新时间 Mon Feb 19 2024 14:00:46 GMT+0800 (China Standard Time) -->
 1. [格力电器仍由董明珠掌舵](https://so.toutiao.com/search?keyword=格力电器仍由董明珠掌舵)
-1. [湖南高速：来不及可先下一次高速](https://so.toutiao.com/search?keyword=湖南高速：来不及可先下一次高速)
-1. [胖东来3天游客量超河南最火景区](https://so.toutiao.com/search?keyword=胖东来3天游客量超河南最火景区)
-1. [王小洪同美国土安全部长举行会晤](https://so.toutiao.com/search?keyword=王小洪同美国土安全部长举行会晤)
+1. [7.98万的比亚迪让燃油车慌了](https://so.toutiao.com/search?keyword=7.98万的比亚迪让燃油车慌了)
+1. [龙年春节的这些瞬间 看哭了](https://so.toutiao.com/search?keyword=龙年春节的这些瞬间+看哭了)
+1. [被曝出轨16岁学生女教师已暂停教学](https://so.toutiao.com/search?keyword=被曝出轨16岁学生女教师已暂停教学)
+1. [格力集团迎来“新掌门”](https://so.toutiao.com/search?keyword=格力集团迎来“新掌门”)
 1. [上交压岁钱时三个孩子一脸不情愿](https://so.toutiao.com/search?keyword=上交压岁钱时三个孩子一脸不情愿)
+1. [颜宁谈贾玲新造型：陷入刻板审美](https://so.toutiao.com/search?keyword=颜宁谈贾玲新造型：陷入刻板审美)
+1. [王小洪同美国土安全部长举行会晤](https://so.toutiao.com/search?keyword=王小洪同美国土安全部长举行会晤)
+1. [利拉德：全明星赛可以更具竞争性](https://so.toutiao.com/search?keyword=利拉德：全明星赛可以更具竞争性)
 1. [无锡发生多人命案？警方辟谣](https://so.toutiao.com/search?keyword=无锡发生多人命案？警方辟谣)
+1. [店家吐槽顾客一家租6套汉服后失联](https://so.toutiao.com/search?keyword=店家吐槽顾客一家租6套汉服后失联)
+1. [市监局介入老凤祥清洗金镯蹭掉logo](https://so.toutiao.com/search?keyword=市监局介入老凤祥清洗金镯蹭掉logo)
+1. [小孩从石狮嘴里拿出圆球放不回去](https://so.toutiao.com/search?keyword=小孩从石狮嘴里拿出圆球放不回去)
+1. [胖东来试吃员工经民主投票可转岗](https://so.toutiao.com/search?keyword=胖东来试吃员工经民主投票可转岗)
+1. [湖南“解放思想大讨论”是变革前奏吗](https://so.toutiao.com/search?keyword=湖南“解放思想大讨论”是变革前奏吗)
+1. [女孩误喝防冻液医生开5瓶白酒解毒](https://so.toutiao.com/search?keyword=女孩误喝防冻液医生开5瓶白酒解毒)
+1. [7.98万的秦PLUS荣耀版有哪些减配](https://so.toutiao.com/search?keyword=7.98万的秦PLUS荣耀版有哪些减配)
+1. [胖东来3天游客量超河南最火景区](https://so.toutiao.com/search?keyword=胖东来3天游客量超河南最火景区)
+1. [男子连续11天刮刮乐兑奖 老板娘报警](https://so.toutiao.com/search?keyword=男子连续11天刮刮乐兑奖+老板娘报警)
+1. [男子走应急车道鸣笛惹众怒被包围](https://so.toutiao.com/search?keyword=男子走应急车道鸣笛惹众怒被包围)
+1. [俄军在阿夫杰耶夫卡缴获西方武器](https://so.toutiao.com/search?keyword=俄军在阿夫杰耶夫卡缴获西方武器)
+1. [杜兰特12中7得到18分5板5助2断](https://so.toutiao.com/search?keyword=杜兰特12中7得到18分5板5助2断)
+1. [英媒报道驻日美军军官逃脱法律制裁](https://so.toutiao.com/search?keyword=英媒报道驻日美军军官逃脱法律制裁)
+1. [律师谈胖东来撤销开除尝面员工](https://so.toutiao.com/search?keyword=律师谈胖东来撤销开除尝面员工)
+1. [高合汽车宣布停工停产6个月](https://so.toutiao.com/search?keyword=高合汽车宣布停工停产6个月)
+1. [全明星缺乏竞争？杰伦·布朗回应](https://so.toutiao.com/search?keyword=全明星缺乏竞争？杰伦·布朗回应)
+1. [主持人张蕾讲雨水节气](https://so.toutiao.com/search?keyword=主持人张蕾讲雨水节气)
+1. [俄军拿下阿夫杰耶夫卡意味着什么](https://so.toutiao.com/search?keyword=俄军拿下阿夫杰耶夫卡意味着什么)
+1. [“十四冬”短道速滑收官](https://so.toutiao.com/search?keyword=“十四冬”短道速滑收官)
+1. [网友用无人机拍到狼群雪中前行画面](https://so.toutiao.com/search?keyword=网友用无人机拍到狼群雪中前行画面)
+1. [2.62万元买下北京1.18㎡房子](https://so.toutiao.com/search?keyword=2.62万元买下北京1.18㎡房子)
+1. [马来西亚歌手父亲吸入鞭炮硝烟去世](https://so.toutiao.com/search?keyword=马来西亚歌手父亲吸入鞭炮硝烟去世)
+1. [演员李勤勤收养周海媚爱犬](https://so.toutiao.com/search?keyword=演员李勤勤收养周海媚爱犬)
+1. [卫健委干部盗卖1.5万套防护服获刑](https://so.toutiao.com/search?keyword=卫健委干部盗卖1.5万套防护服获刑)
+1. [正式确诊为魏晨](https://so.toutiao.com/search?keyword=正式确诊为魏晨)
+1. [“放射治疗之父”王小虎教授逝世](https://so.toutiao.com/search?keyword=“放射治疗之父”王小虎教授逝世)
+1. [金晨胡夏挽手遛狗](https://so.toutiao.com/search?keyword=金晨胡夏挽手遛狗)
+1. [游客借位拍照与大佛击掌](https://so.toutiao.com/search?keyword=游客借位拍照与大佛击掌)
+1. [武汉多所学校延迟返校](https://so.toutiao.com/search?keyword=武汉多所学校延迟返校)
+1. [比亚迪秦PLUS荣耀版上市](https://so.toutiao.com/search?keyword=比亚迪秦PLUS荣耀版上市)
+1. [十四冬：孙龙加冕四冠王](https://so.toutiao.com/search?keyword=十四冬：孙龙加冕四冠王)
+1. [高速太堵跟领导请假被拒了](https://so.toutiao.com/search?keyword=高速太堵跟领导请假被拒了)
+1. [春节上门喂宠物8天挣上万](https://so.toutiao.com/search?keyword=春节上门喂宠物8天挣上万)
+1. [当爸爸说电视只能在沙发上看](https://so.toutiao.com/search?keyword=当爸爸说电视只能在沙发上看)
+1. [加油站女子人肉占位用雪糕筒挡后车](https://so.toutiao.com/search?keyword=加油站女子人肉占位用雪糕筒挡后车)
+1. [阿德巴约全明星首发 仅得3分2板2助](https://so.toutiao.com/search?keyword=阿德巴约全明星首发+仅得3分2板2助)
+1. [唐斯成为全明星砍下50+历史第4人](https://so.toutiao.com/search?keyword=唐斯成为全明星砍下50+历史第4人)
+1. [江苏一工厂爆炸致3死2失联](https://so.toutiao.com/search?keyword=江苏一工厂爆炸致3死2失联)
+1. [东契奇10中3得7分7板7助](https://so.toutiao.com/search?keyword=东契奇10中3得7分7板7助)
+1. [飞海南机票价格断崖式暴跌](https://so.toutiao.com/search?keyword=飞海南机票价格断崖式暴跌)
+1. [司机卡点最后一分钟免费下高速](https://so.toutiao.com/search?keyword=司机卡点最后一分钟免费下高速)
+1. [湖南高速：来不及可先下一次高速](https://so.toutiao.com/search?keyword=湖南高速：来不及可先下一次高速)
 1. [因堵车延迟下高速应付全程高速费吗](https://so.toutiao.com/search?keyword=因堵车延迟下高速应付全程高速费吗)
 1. [午评：沪指涨0.9% 盘中触及2900点](https://so.toutiao.com/search?keyword=午评：沪指涨0.9%+盘中触及2900点)
 1. [比亚迪路天：要实现“电比油低”](https://so.toutiao.com/search?keyword=比亚迪路天：要实现“电比油低”)
-1. [小孩从石狮嘴里拿出圆球放不回去](https://so.toutiao.com/search?keyword=小孩从石狮嘴里拿出圆球放不回去)
-1. [男子走应急车道鸣笛惹众怒被包围](https://so.toutiao.com/search?keyword=男子走应急车道鸣笛惹众怒被包围)
-1. [加油站女子人肉占位用雪糕筒挡后车](https://so.toutiao.com/search?keyword=加油站女子人肉占位用雪糕筒挡后车)
 1. [湖北黄石下冰雹了](https://so.toutiao.com/search?keyword=湖北黄石下冰雹了)
-1. [市监局介入老凤祥清洗金镯蹭掉logo](https://so.toutiao.com/search?keyword=市监局介入老凤祥清洗金镯蹭掉logo)
-1. [俄军拿下阿夫杰耶夫卡意味着什么](https://so.toutiao.com/search?keyword=俄军拿下阿夫杰耶夫卡意味着什么)
-1. [颜宁谈贾玲新造型：陷入刻板审美](https://so.toutiao.com/search?keyword=颜宁谈贾玲新造型：陷入刻板审美)
-1. [高合汽车宣布停工停产6个月](https://so.toutiao.com/search?keyword=高合汽车宣布停工停产6个月)
 1. [王鹤棣全明星周末见到库里](https://so.toutiao.com/search?keyword=王鹤棣全明星周末见到库里)
-1. [正式确诊为魏晨](https://so.toutiao.com/search?keyword=正式确诊为魏晨)
-1. [卫健委干部盗卖1.5万套防护服获刑](https://so.toutiao.com/search?keyword=卫健委干部盗卖1.5万套防护服获刑)
 1. [邓小平逝世27周年](https://so.toutiao.com/search?keyword=邓小平逝世27周年)
-1. [马来西亚歌手父亲吸入鞭炮硝烟去世](https://so.toutiao.com/search?keyword=马来西亚歌手父亲吸入鞭炮硝烟去世)
 1. [中国缘何连续两个月增持美国国债](https://so.toutiao.com/search?keyword=中国缘何连续两个月增持美国国债)
-1. [武汉多所学校延迟返校](https://so.toutiao.com/search?keyword=武汉多所学校延迟返校)
-1. [高速太堵跟领导请假被拒了](https://so.toutiao.com/search?keyword=高速太堵跟领导请假被拒了)
-1. [男子连续11天刮刮乐兑奖 老板娘报警](https://so.toutiao.com/search?keyword=男子连续11天刮刮乐兑奖+老板娘报警)
 1. [俄称在多个方向击退乌军进攻](https://so.toutiao.com/search?keyword=俄称在多个方向击退乌军进攻)
 1. [专家谈菲律宾单方面制定涉南海法律](https://so.toutiao.com/search?keyword=专家谈菲律宾单方面制定涉南海法律)
-1. [江苏一工厂爆炸致3死2失联](https://so.toutiao.com/search?keyword=江苏一工厂爆炸致3死2失联)
-1. [春节上门喂宠物8天挣上万](https://so.toutiao.com/search?keyword=春节上门喂宠物8天挣上万)
-1. [演员李勤勤收养周海媚爱犬](https://so.toutiao.com/search?keyword=演员李勤勤收养周海媚爱犬)
-1. [比亚迪秦PLUS荣耀版上市](https://so.toutiao.com/search?keyword=比亚迪秦PLUS荣耀版上市)
-1. [网友用无人机拍到狼群雪中前行画面](https://so.toutiao.com/search?keyword=网友用无人机拍到狼群雪中前行画面)
 1. [马丽测评了14条光腿神器](https://so.toutiao.com/search?keyword=马丽测评了14条光腿神器)
 1. [《王者荣耀》新英雄“大司命”官宣](https://so.toutiao.com/search?keyword=《王者荣耀》新英雄“大司命”官宣)
 1. [航运公司回应过海新能源车每船18辆](https://so.toutiao.com/search?keyword=航运公司回应过海新能源车每船18辆)
-1. [2.62万元买下北京1.18㎡房子](https://so.toutiao.com/search?keyword=2.62万元买下北京1.18㎡房子)
 1. [男子吃席发现村里开始上预制菜](https://so.toutiao.com/search?keyword=男子吃席发现村里开始上预制菜)
 1. [普京：俄乌战事关乎俄罗斯“存亡”](https://so.toutiao.com/search?keyword=普京：俄乌战事关乎俄罗斯“存亡”)
-1. [游客借位拍照与大佛击掌](https://so.toutiao.com/search?keyword=游客借位拍照与大佛击掌)
-1. [飞海南机票价格断崖式暴跌](https://so.toutiao.com/search?keyword=飞海南机票价格断崖式暴跌)
-1. [当爸爸说电视只能在沙发上看](https://so.toutiao.com/search?keyword=当爸爸说电视只能在沙发上看)
 1. [特朗普卖球鞋](https://so.toutiao.com/search?keyword=特朗普卖球鞋)
 1. [约基奇独家入驻抖音](https://so.toutiao.com/search?keyword=约基奇独家入驻抖音)
 1. [男子观影打呼噜遭暴打](https://so.toutiao.com/search?keyword=男子观影打呼噜遭暴打)
@@ -58,7 +78,6 @@
 1. [今日雨水](https://so.toutiao.com/search?keyword=今日雨水)
 1. [俄攻陷乌军事堡垒震动美欧](https://so.toutiao.com/search?keyword=俄攻陷乌军事堡垒震动美欧)
 1. [建行回应女子因急办业务下跪](https://so.toutiao.com/search?keyword=建行回应女子因急办业务下跪)
-1. [湖南“解放思想大讨论”是变革前奏吗](https://so.toutiao.com/search?keyword=湖南“解放思想大讨论”是变革前奏吗)
 1. [大V谈2024年老百姓十大愿望](https://so.toutiao.com/search?keyword=大V谈2024年老百姓十大愿望)
 1. [吴尊感谢昆凌送他霉霉演唱会门票](https://so.toutiao.com/search?keyword=吴尊感谢昆凌送他霉霉演唱会门票)
 1. [高三班主任强吻女学生被停职](https://so.toutiao.com/search?keyword=高三班主任强吻女学生被停职)
