--- a/archives/toutiao-search/2024-02-19.md
+++ b/archives/toutiao-search/2024-02-19.md
@@ -1,62 +1,81 @@
 # 2024-02-19
 
-共 199 条
+共 217 条
 
 <!-- BEGIN TOUTIAO -->
-<!-- 最后更新时间 Mon Feb 19 2024 15:00:40 GMT+0800 (China Standard Time) -->
+<!-- 最后更新时间 Mon Feb 19 2024 16:00:40 GMT+0800 (China Standard Time) -->
 1. [专家解读大陆海警厦金海域执法行动](https://so.toutiao.com/search?keyword=专家解读大陆海警厦金海域执法行动)
-1. [格力集团迎来“新掌门”](https://so.toutiao.com/search?keyword=格力集团迎来“新掌门”)
+1. [学校通报女教师被指出轨学生：停职](https://so.toutiao.com/search?keyword=学校通报女教师被指出轨学生：停职)
 1. [龙年春节的这些瞬间 看哭了](https://so.toutiao.com/search?keyword=龙年春节的这些瞬间+看哭了)
-1. [被曝出轨16岁学生女教师已暂停教学](https://so.toutiao.com/search?keyword=被曝出轨16岁学生女教师已暂停教学)
-1. [董明珠和格力集团究竟啥关系](https://so.toutiao.com/search?keyword=董明珠和格力集团究竟啥关系)
-1. [颜宁谈贾玲新造型：陷入刻板审美](https://so.toutiao.com/search?keyword=颜宁谈贾玲新造型：陷入刻板审美)
-1. [男子举报妻子与副镇长非法同居](https://so.toutiao.com/search?keyword=男子举报妻子与副镇长非法同居)
-1. [王小洪同美国土安全部长举行会晤](https://so.toutiao.com/search?keyword=王小洪同美国土安全部长举行会晤)
 1. [格力电器仍由董明珠掌舵](https://so.toutiao.com/search?keyword=格力电器仍由董明珠掌舵)
-1. [无锡发生多人命案？警方辟谣](https://so.toutiao.com/search?keyword=无锡发生多人命案？警方辟谣)
 1. [女孩误喝防冻液医生开5瓶白酒解毒](https://so.toutiao.com/search?keyword=女孩误喝防冻液医生开5瓶白酒解毒)
-1. [《王者荣耀》新英雄“大司命”官宣](https://so.toutiao.com/search?keyword=《王者荣耀》新英雄“大司命”官宣)
-1. [店家吐槽顾客一家租6套汉服后失联](https://so.toutiao.com/search?keyword=店家吐槽顾客一家租6套汉服后失联)
-1. [俄军拿下阿夫杰耶夫卡意味着什么](https://so.toutiao.com/search?keyword=俄军拿下阿夫杰耶夫卡意味着什么)
-1. [小孩从石狮嘴里拿出圆球放不回去](https://so.toutiao.com/search?keyword=小孩从石狮嘴里拿出圆球放不回去)
-1. [上交压岁钱时三个孩子一脸不情愿](https://so.toutiao.com/search?keyword=上交压岁钱时三个孩子一脸不情愿)
+1. [A股迎龙年开门红](https://so.toutiao.com/search?keyword=A股迎龙年开门红)
+1. [格力集团迎来“新掌门”](https://so.toutiao.com/search?keyword=格力集团迎来“新掌门”)
+1. [王小洪同美国土安全部长举行会晤](https://so.toutiao.com/search?keyword=王小洪同美国土安全部长举行会晤)
+1. [男子举报妻子与副镇长非法同居](https://so.toutiao.com/search?keyword=男子举报妻子与副镇长非法同居)
+1. [无锡发生多人命案？警方辟谣](https://so.toutiao.com/search?keyword=无锡发生多人命案？警方辟谣)
+1. [中国银行原董事长刘连舸被公诉](https://so.toutiao.com/search?keyword=中国银行原董事长刘连舸被公诉)
+1. [湖南“解放思想大讨论”是变革前奏吗](https://so.toutiao.com/search?keyword=湖南“解放思想大讨论”是变革前奏吗)
 1. [陈思诚佟丽娅携儿子外出游玩](https://so.toutiao.com/search?keyword=陈思诚佟丽娅携儿子外出游玩)
-1. [“放射治疗之父”王小虎教授逝世](https://so.toutiao.com/search?keyword=“放射治疗之父”王小虎教授逝世)
-1. [今晚国内油价或将调整](https://so.toutiao.com/search?keyword=今晚国内油价或将调整)
-1. [男子走应急车道鸣笛惹众怒被包围](https://so.toutiao.com/search?keyword=男子走应急车道鸣笛惹众怒被包围)
-1. [AI生成的《西游记》短片](https://so.toutiao.com/search?keyword=AI生成的《西游记》短片)
-1. [胖东来3天游客量超河南最火景区](https://so.toutiao.com/search?keyword=胖东来3天游客量超河南最火景区)
-1. [男子连续11天刮刮乐兑奖 老板娘报警](https://so.toutiao.com/search?keyword=男子连续11天刮刮乐兑奖+老板娘报警)
-1. [网友用无人机拍到狼群雪中前行画面](https://so.toutiao.com/search?keyword=网友用无人机拍到狼群雪中前行画面)
-1. [高合汽车宣布停工停产6个月](https://so.toutiao.com/search?keyword=高合汽车宣布停工停产6个月)
-1. [卫健委干部盗卖1.5万套防护服获刑](https://so.toutiao.com/search?keyword=卫健委干部盗卖1.5万套防护服获刑)
-1. [爷爷嘱咐孙子一定要把奶奶照顾好](https://so.toutiao.com/search?keyword=爷爷嘱咐孙子一定要把奶奶照顾好)
+1. [店家吐槽顾客一家租6套汉服后失联](https://so.toutiao.com/search?keyword=店家吐槽顾客一家租6套汉服后失联)
 1. [7.98万的比亚迪让燃油车慌了](https://so.toutiao.com/search?keyword=7.98万的比亚迪让燃油车慌了)
-1. [熊出没梗王小章实力圈粉](https://so.toutiao.com/search?keyword=熊出没梗王小章实力圈粉)
-1. [俄攻陷乌军事堡垒震动美欧](https://so.toutiao.com/search?keyword=俄攻陷乌军事堡垒震动美欧)
-1. [当爸爸说电视只能在沙发上看](https://so.toutiao.com/search?keyword=当爸爸说电视只能在沙发上看)
+1. [小孩从石狮嘴里拿出圆球放不回去](https://so.toutiao.com/search?keyword=小孩从石狮嘴里拿出圆球放不回去)
+1. [俄军拿下阿夫杰耶夫卡意味着什么](https://so.toutiao.com/search?keyword=俄军拿下阿夫杰耶夫卡意味着什么)
+1. [男子连续11天刮刮乐兑奖 老板娘报警](https://so.toutiao.com/search?keyword=男子连续11天刮刮乐兑奖+老板娘报警)
+1. [爷爷嘱咐孙子一定要把奶奶照顾好](https://so.toutiao.com/search?keyword=爷爷嘱咐孙子一定要把奶奶照顾好)
+1. [已婚女子爱上顺风车车主被骗近20万](https://so.toutiao.com/search?keyword=已婚女子爱上顺风车车主被骗近20万)
+1. [第60届慕安会闭幕](https://so.toutiao.com/search?keyword=第60届慕安会闭幕)
+1. [航拍新疆狼群刨雪前行](https://so.toutiao.com/search?keyword=航拍新疆狼群刨雪前行)
+1. [刘雨欣洛杉矶家被偷空 损失千万](https://so.toutiao.com/search?keyword=刘雨欣洛杉矶家被偷空+损失千万)
+1. [李思思复工](https://so.toutiao.com/search?keyword=李思思复工)
+1. [胡锡进：不应否定湖南解放思想大讨论](https://so.toutiao.com/search?keyword=胡锡进：不应否定湖南解放思想大讨论)
+1. [高合汽车宣布停工停产6个月](https://so.toutiao.com/search?keyword=高合汽车宣布停工停产6个月)
+1. [颜宁谈贾玲新造型：陷入刻板审美](https://so.toutiao.com/search?keyword=颜宁谈贾玲新造型：陷入刻板审美)
+1. [女网红海底捞拍不雅照 4人被刑拘](https://so.toutiao.com/search?keyword=女网红海底捞拍不雅照+4人被刑拘)
+1. [男子走应急车道鸣笛惹众怒被包围](https://so.toutiao.com/search?keyword=男子走应急车道鸣笛惹众怒被包围)
+1. [卫健委干部盗卖1.5万套防护服获刑](https://so.toutiao.com/search?keyword=卫健委干部盗卖1.5万套防护服获刑)
+1. [烈士墓碑被树砸中 祖孙三人合力挪开](https://so.toutiao.com/search?keyword=烈士墓碑被树砸中+祖孙三人合力挪开)
 1. [2.62万元买下北京1.18㎡房子](https://so.toutiao.com/search?keyword=2.62万元买下北京1.18㎡房子)
-1. [比亚迪秦PLUS荣耀版上市](https://so.toutiao.com/search?keyword=比亚迪秦PLUS荣耀版上市)
-1. [春节上门喂宠物8天挣上万](https://so.toutiao.com/search?keyword=春节上门喂宠物8天挣上万)
-1. [高速太堵跟领导请假被拒了](https://so.toutiao.com/search?keyword=高速太堵跟领导请假被拒了)
+1. [俄攻陷乌军事堡垒震动美欧](https://so.toutiao.com/search?keyword=俄攻陷乌军事堡垒震动美欧)
+1. [王毅：中俄关系是邻国之间正常关系](https://so.toutiao.com/search?keyword=王毅：中俄关系是邻国之间正常关系)
+1. [AI生成的《西游记》短片](https://so.toutiao.com/search?keyword=AI生成的《西游记》短片)
+1. [人民日报点评王鹤棣全明星赛](https://so.toutiao.com/search?keyword=人民日报点评王鹤棣全明星赛)
 1. [马来西亚歌手父亲吸入鞭炮硝烟去世](https://so.toutiao.com/search?keyword=马来西亚歌手父亲吸入鞭炮硝烟去世)
 1. [市监局介入老凤祥清洗金镯蹭掉logo](https://so.toutiao.com/search?keyword=市监局介入老凤祥清洗金镯蹭掉logo)
-1. [狗熊岭是没有小章在乎的人了吗](https://so.toutiao.com/search?keyword=狗熊岭是没有小章在乎的人了吗)
-1. [王毅：中俄关系是邻国之间正常关系](https://so.toutiao.com/search?keyword=王毅：中俄关系是邻国之间正常关系)
+1. [贾玲片场减肥餐：荞麦面和水煮青菜](https://so.toutiao.com/search?keyword=贾玲片场减肥餐：荞麦面和水煮青菜)
+1. [男子吃席发现村里开始上预制菜](https://so.toutiao.com/search?keyword=男子吃席发现村里开始上预制菜)
+1. [雨水节气要“春捂”吗](https://so.toutiao.com/search?keyword=雨水节气要“春捂”吗)
+1. [新疆冬天有多冷：水浇栏杆秒结冰](https://so.toutiao.com/search?keyword=新疆冬天有多冷：水浇栏杆秒结冰)
+1. [飞海南机票价格断崖式暴跌](https://so.toutiao.com/search?keyword=飞海南机票价格断崖式暴跌)
 1. [武汉多所学校延迟返校](https://so.toutiao.com/search?keyword=武汉多所学校延迟返校)
+1. [胖东来挂牌4A级景区可能性有多大](https://so.toutiao.com/search?keyword=胖东来挂牌4A级景区可能性有多大)
+1. [高速太堵跟领导请假被拒了](https://so.toutiao.com/search?keyword=高速太堵跟领导请假被拒了)
+1. [普京：俄乌战事关乎俄罗斯“存亡”](https://so.toutiao.com/search?keyword=普京：俄乌战事关乎俄罗斯“存亡”)
+1. [十大券商最新策略观点出炉](https://so.toutiao.com/search?keyword=十大券商最新策略观点出炉)
+1. [朱婷：努力做好回归中国女排的准备](https://so.toutiao.com/search?keyword=朱婷：努力做好回归中国女排的准备)
+1. [副镇长否认非法同居：会立即报警](https://so.toutiao.com/search?keyword=副镇长否认非法同居：会立即报警)
+1. [被曝出轨16岁学生女教师已暂停教学](https://so.toutiao.com/search?keyword=被曝出轨16岁学生女教师已暂停教学)
+1. [董明珠和格力集团究竟啥关系](https://so.toutiao.com/search?keyword=董明珠和格力集团究竟啥关系)
+1. [《王者荣耀》新英雄“大司命”官宣](https://so.toutiao.com/search?keyword=《王者荣耀》新英雄“大司命”官宣)
+1. [上交压岁钱时三个孩子一脸不情愿](https://so.toutiao.com/search?keyword=上交压岁钱时三个孩子一脸不情愿)
+1. [“放射治疗之父”王小虎教授逝世](https://so.toutiao.com/search?keyword=“放射治疗之父”王小虎教授逝世)
+1. [今晚国内油价或将调整](https://so.toutiao.com/search?keyword=今晚国内油价或将调整)
+1. [胖东来3天游客量超河南最火景区](https://so.toutiao.com/search?keyword=胖东来3天游客量超河南最火景区)
+1. [网友用无人机拍到狼群雪中前行画面](https://so.toutiao.com/search?keyword=网友用无人机拍到狼群雪中前行画面)
+1. [熊出没梗王小章实力圈粉](https://so.toutiao.com/search?keyword=熊出没梗王小章实力圈粉)
+1. [当爸爸说电视只能在沙发上看](https://so.toutiao.com/search?keyword=当爸爸说电视只能在沙发上看)
+1. [比亚迪秦PLUS荣耀版上市](https://so.toutiao.com/search?keyword=比亚迪秦PLUS荣耀版上市)
+1. [春节上门喂宠物8天挣上万](https://so.toutiao.com/search?keyword=春节上门喂宠物8天挣上万)
+1. [狗熊岭是没有小章在乎的人了吗](https://so.toutiao.com/search?keyword=狗熊岭是没有小章在乎的人了吗)
 1. [特朗普卖球鞋](https://so.toutiao.com/search?keyword=特朗普卖球鞋)
 1. [生产铝棒的铸造井为何容易爆炸](https://so.toutiao.com/search?keyword=生产铝棒的铸造井为何容易爆炸)
 1. [媒体：国足选帅和阿尔及利亚撞上](https://so.toutiao.com/search?keyword=媒体：国足选帅和阿尔及利亚撞上)
 1. [董宇辉眼中的雨水节气](https://so.toutiao.com/search?keyword=董宇辉眼中的雨水节气)
 1. [加拿大女子就“滚回香港”言论认错](https://so.toutiao.com/search?keyword=加拿大女子就“滚回香港”言论认错)
-1. [李思思复工](https://so.toutiao.com/search?keyword=李思思复工)
 1. [《烟火人家》妈妈是女儿最大的底气](https://so.toutiao.com/search?keyword=《烟火人家》妈妈是女儿最大的底气)
 1. [约基奇东契奇互动太可爱了](https://so.toutiao.com/search?keyword=约基奇东契奇互动太可爱了)
-1. [普京：俄乌战事关乎俄罗斯“存亡”](https://so.toutiao.com/search?keyword=普京：俄乌战事关乎俄罗斯“存亡”)
-1. [飞海南机票价格断崖式暴跌](https://so.toutiao.com/search?keyword=飞海南机票价格断崖式暴跌)
 1. [利拉德：全明星赛可以更具竞争性](https://so.toutiao.com/search?keyword=利拉德：全明星赛可以更具竞争性)
 1. [胖东来试吃员工经民主投票可转岗](https://so.toutiao.com/search?keyword=胖东来试吃员工经民主投票可转岗)
-1. [湖南“解放思想大讨论”是变革前奏吗](https://so.toutiao.com/search?keyword=湖南“解放思想大讨论”是变革前奏吗)
 1. [7.98万的秦PLUS荣耀版有哪些减配](https://so.toutiao.com/search?keyword=7.98万的秦PLUS荣耀版有哪些减配)
 1. [俄军在阿夫杰耶夫卡缴获西方武器](https://so.toutiao.com/search?keyword=俄军在阿夫杰耶夫卡缴获西方武器)
 1. [杜兰特12中7得到18分5板5助2断](https://so.toutiao.com/search?keyword=杜兰特12中7得到18分5板5助2断)
@@ -88,7 +107,6 @@
 1. [专家谈菲律宾单方面制定涉南海法律](https://so.toutiao.com/search?keyword=专家谈菲律宾单方面制定涉南海法律)
 1. [马丽测评了14条光腿神器](https://so.toutiao.com/search?keyword=马丽测评了14条光腿神器)
 1. [航运公司回应过海新能源车每船18辆](https://so.toutiao.com/search?keyword=航运公司回应过海新能源车每船18辆)
-1. [男子吃席发现村里开始上预制菜](https://so.toutiao.com/search?keyword=男子吃席发现村里开始上预制菜)
 1. [约基奇独家入驻抖音](https://so.toutiao.com/search?keyword=约基奇独家入驻抖音)
 1. [男子观影打呼噜遭暴打](https://so.toutiao.com/search?keyword=男子观影打呼噜遭暴打)
 1. [Sora的真正价值在哪](https://so.toutiao.com/search?keyword=Sora的真正价值在哪)
